# harnessie

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ECOSYSTEM.md  EVALS.md  GOVERNANCE.md  IMPLEMENTATION_PLAN.md  INTENT.md  LICENSE  NEXT.md  NOTICE  OWNERSHIP.yaml  PROJECT_CONTEXT.md  PROMPTS.md  README.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  assistant-guide.txt  ecosystem.yaml  pyproject.toml  session-url-log.md  source-verification.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
agents/: orchestrator.md
audits/: clarity-conformance-2026-07-06.md  handoff-relevance-2026-07-21.md  repo-standards-audit-2026-07-06.md  security-audit-2026-07-06.json  security-audit-2026-07-06.md
brand/: README.md
config/: boundary.yaml  cascade.yaml  models.yaml
decisions/: AIDR-0001-adopt-v0-2-governance-layer.md  AIDR-0002-v0-3-tenets-and-triage.md  AIDR-0003-adopt-0-7-sovereignty-routing-and-containment.md  AIDR-0004-adopt-redrafted-0-7-sovereignty-spec.md  AIDR-0005-escalation-headroom-option-a-plus-invariant.md  AIDR-0006-standalone-verifier-surface-for-agent-produced-prs.md  AIDR-0007-ship-harnessie-verify-as-a-github-action.md  AIDR-0008-operator-side-engine-wrapper-containment.md
docs/: 404.html  CNAME  GUIDE.md  MANIFEST.yaml  NEXT.md  README.md  brains.html  brains.md  compare.html  compare.md  getting-started.html  getting-started.md  guide.html  index.html  ladder.html  ladder.md  llms.txt  quickstart.html  quickstart.md  ringer.html  ringer.md  robots.txt  site.webmanifest  sitemap.xml  threat-model.html  threat-model.md
evals/: baseline.yaml  canary-leak.yaml  gate-integrity.yaml  governance.yaml  operability.yaml  redteam.yaml  stewardship.yaml  triage.yaml
harness/: __init__.py  adversarial.py  approval.py  audit.py  boundary.py  cascade.py  cli.py  evals.py  events.py  explain.py  firstrun.py  ids.py  init_project.py  live_scorecard.py  loop.py  memory.py  ownership.py  preflight.py  quarantine.py  roles.py  routing.py  runner.py  sandbox.py  state.py  trust_manifest.py  verify.py  verify_standalone.py  write_safety.py
memory/: MEMORY.md
scripts/: build_docs_html.py  ecosystem_status.py
templates/: AIDR-0000-template.md
tests/: test_adversarial.py  test_approval.py  test_audit.py  test_boundary.py  test_boundary_integration.py  test_bundle_identity.py  test_cascade.py  test_cascade_wiring.py  test_consent.py  test_ecosystem.py  test_evals.py  test_explain.py  test_firstrun.py  test_graceful_boundaries.py  test_guide_artifacts.py  test_ids.py  test_live_scorecard.py  test_loop.py  test_memory_tools.py  test_ownership.py  (+16 more)
(+28 files in other folders)
