[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harnessie"
version = "0.6.0"
description = "Harnessie: a brain-agnostic multi-agent harness (orchestrator / workers / verifiers) with verification gates, consent-based orchestration, ownership lanes, adversarial decision records, routing policy, and a tamper-evident audit log."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Sam Rogers", email = "subscriptions@snapsynapse.com" }]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://harnessie.com/"
Repository = "https://github.com/snapsynapse/harnessie"
Assistant-Guide = "https://harnessie.com/.well-known/assistant-guide.txt"

[project.scripts]
harnessie = "harness.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["harness*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
